--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>theappleman.github.io</title>
+  <title>applehq.eu</title>
   <meta name="description" content="Homepage">
   <meta name="author" content="applehq">
 
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <header class="u-full-width">
-        <h2>applehq / TheAppleMan</h2>
+        <h2>applehq</h2>
     </header>
 
     <div class="row">
