ldap-krb5: document initgroups nsswitch
initgroups concerns the discovery of secondary groups, which is possible to control in ldap.

--- a/ldap-krb5.html
+++ b/ldap-krb5.html
@@ -198,6 +198,7 @@
           <pre>shadow:      files</pre>
           <pre>group:       files mymachines systemd ldap</pre>
           <pre>hosts:       files mymachines resolve [!UNAVAIL=return] dns myhostname</pre>
+          <pre>initgroups:  db [SUCCESS=continue] files ldap</pre>
           <pre>networks:    files dns</pre>
           <pre>services:    db files</pre>
           <pre>protocols:   db files</pre>
