Update mastodon link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="hcard-0xdc" class="vcard">
             <div class="cloud">
                 <a class="url" rel="me" target="_blank" title="a.k.a. the fediverse"
-                    href="https://niu.moe/@applehq">mastodon</a>
+                    href="https://thighhigh.supply/@ily">mastodon</a>
                 <a class="url" rel="me" target="_blank"
                     href="https://twitter.com/applehq">twitter</a>
                 <a class="url" rel="me" target="_blank"
