Add random generated email to frontpage

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
       
       <div class="five columns">
         <h4 title="keep in touch, best friend forever">k.i.t., b.f.f.</h4>
-        <div id="hcard-0xdc" class="vcard">
-            <div class="cloud">
-                <a class="url" rel="me" target="_blank" title="a.k.a. the fediverse"
-                    href="https://thighhigh.supply/@ily">mastodon</a>
-                <a class="url" rel="me" target="_blank"
-                    href="https://twitter.com/applehq">twitter</a>
-                <a class="url" rel="me" target="_blank"
-                    href="https://github.com/theappleman">github</a>
-                <a class="url" rel="me" target="_blank"
-                    href="https://youtube.com/applehq">youtube</a>
-                <a class="url" rel="me" target="_blank"
-                    href="https://steamcommunity.com/id/applehq">steam</a>
-                <a class="url" rel="me" target="_blank"
-                    href="xmpp:apple@neko.im">xmpp</a>
-            </div>
+        <div id="hcard-applehq" class="vcard">
         </div>
+	<div class="cloud">
+	  <a class="url" rel="me" target="_blank" title="a.k.a. the fediverse"
+	    href="https://thighhigh.supply/@ily">mastodon</a>
+	  <a class="url" rel="me" target="_blank"
+	    href="https://twitter.com/applehq">twitter</a>
+	  <a class="url" rel="me" target="_blank"
+	    href="https://github.com/theappleman">github</a>
+	  <a class="url" rel="me" target="_blank"
+	    href="https://youtube.com/applehq">youtube</a>
+	  <a class="url" rel="me" target="_blank"
+	    href="https://steamcommunity.com/id/applehq">steam</a>
+	  <a class="url" rel="me" target="_blank"
+	    href="xmpp:apple@neko.im">xmpp</a>
+	</div>
 
       </div>
       
@@ -67,5 +67,6 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src="js/fp-email.js"></script>
 </body>
 </html>
