--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 	<div class="cloud">
 	  <a class="url" rel="me" target="_blank" title="a.k.a. the fediverse"
-	    href="https://thighhigh.supply/@ily">mastodon</a>
+	    href="https://lonely.town/@subleq">mastodon</a>
 	  <a class="url" rel="me" target="_blank"
 	    href="https://twitter.com/applehq">twitter</a>
 	  <a class="url" rel="me" target="_blank"
