add livestream functionality from 0xdc.io

--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/fp-email.js"></script>
+<script src="//cdn.dashjs.org/latest/dash.all.min.js"></script>
+<script>
+    var user = "apple";
+</script>
+<script src="js/livestream.js"></script>
 </body>
 </html>
