--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/fp-email.js"></script>
-<script src="//cdn.dashjs.org/latest/dash.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@0.14.17"></script>
 <script>
     var user = "apple";
 </script>
